--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <header class="pt-16 justify-content">
                         <div class="mb-7">
                             <div class="relative bg-opacity-75 p-2 pr-6 rounded-full inline-block bg-black bg-opacity-backdrop-blur text-white text-opacity-80">
-                                <span class="dot"/>
+                                <span class="dot">
                                 <p class="pl-7">GOLDEN GATE Token $FAIR (v2) is now available for trade! You can buy it<!-- -->
                                     <a rel="noreferrer noopen" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xf8d9FeEae0360E183A3BD81c034a04Cf7E261Ba5" target="_blank" class="underline">right here</a>. -<!-- -->
                                     <span class="font-light">04/25/2021</span>
