--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <title>goldengatetoken🌉</title>
     <meta name="robots" content="index,follow" />
     <meta name="googlebot" content="index,follow" />
-    <meta name="description" content="GOLDEN GATE Token allows you to earn income from volume with a growing price floor. The first launchpad by WarOnRugs is coming in Q2 on GOLDEN GATE Token." />
+    <meta name="description" content="GOLDEN GATE Token - World's largest artificial intelligence trade algorithm." />
     <meta property="og:title" content="GOLDEN GATE Token🌉" />
-    <meta property="og:description" content="GOLDEN GATE Token allows you to earn income from volume with a growing price floor. The first launchpad by WarOnRugs is coming in Q2 on GOLDEN GATE Token." />
+    <meta property="og:description" content="GOLDEN GATE Token - World's largest artificial intelligence trade algorithm." />
     <meta property="og:locale" content="en" />
     <meta property="og:site_name" content="GOLDEN GATE Token" />
     <meta name="next-head-count" content="15" />
@@ -34,7 +34,7 @@
             <div class="mb-7">
             <div class="relative bg-opacity-75 p-2 pr-6 rounded-full inline-block bg-black bg-opacity-backdrop-blur text-white text-opacity-80">
                 <span class="dot"></span>
-                <p class="pl-7">GOLDEN GATE Token $FAIR (v2) is now available for trade! You can buy it<!-- --> 
+                <p class="pl-7">GOLDEN GATE Token (v2) is now available for trade! You can buy it<!-- --> 
                 <a rel="noreferrer noopen" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xf8d9FeEae0360E183A3BD81c034a04Cf7E261Ba5" target="_blank" class="underline">right here</a>. -<!-- --> 
                 <span class="font-light">04/25/2021</span>
                     </p>
@@ -46,7 +46,11 @@
                 <img style="max-width:100%;display:block;margin:0;border:none;padding:0" alt="" aria-hidden="true" role="presentation" src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTM2IiBoZWlnaHQ9IjE2OSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4=" />
                     </div>
                 <img src="./assets/logo_small.png"  width="188" height="273">
-                </div><ul class="navigation md:ml-5"><li><a rel="noreferrer noopen" href="https://twitter.com/goldengatetoken" target="_blank" class="button twitter bg-opacity-backdrop-blur">Twitter</a></li><li><a rel="noreferrer noopen" href="https://t.me/goldengatetoken" target="_blank" class="button telegram bg-opacity-backdrop-blur">Telegram</a></li><li><a rel="noreferrer noopen" href="https://discord.gg/RhCfUMsYVa" target="_blank" class="button discord bg-opacity-backdrop-blur">Discord</a></li><li><a rel="noreferrer noopen" href="https://www.reddit.com/r/goldengatetoken" target="_blank" class="button reddit bg-opacity-backdrop-blur">Reddit</a></li><li><a rel="noreferrer noopen" href="https://goldengatetoken.medium.com" target="_blank" class="button medium bg-opacity-backdrop-blur">Medium</a></li></ul></div></header><div class="text-xl content"><div class="mt-2 md:mt-8"><div class="text-3xl font-regular"><span class="font-bold">Passive income</span> <!-- -->from volume with<!-- --> <span class="font-bold">growing price floor</span>.<br /><a class="underline" href="https://waronrugs.medium.com/goldengatetoken-the-fairest-way-to-launch-a-project-e82b9a38d52a" target="_blank" rel="noreferrer noopen">Decentralized launchpad coming this Q3.</a></div></div><ul class="text-2xl mt-4"><li><span role="img" aria-label="rocket">🪐</span> <!-- -->Earn passive income by holding<!-- --> <span class="font-bold">GOLDEN GATE Token</span> <!-- -->on the Binance Smart Chain</li><li><span role="img" aria-label="earth">🌘</span> <!-- -->2% fee per transaction. 1% to you. 1% to build a higher price floor</li>
+                </div><ul class="navigation md:ml-5"><li><a rel="noreferrer noopen" href="https://twitter.com/goldengatetoken" target="_blank" class="button twitter bg-opacity-backdrop-blur">Twitter</a></li><li><a rel="noreferrer noopen" href="https://t.me/goldengatetoken" target="_blank" class="button telegram bg-opacity-backdrop-blur">Telegram</a></li><li><a rel="noreferrer noopen" href="https://discord.gg/RhCfUMsYVa" target="_blank" class="button discord bg-opacity-backdrop-blur">Discord</a></li><li><a rel="noreferrer noopen" href="https://www.reddit.com/r/goldengatetoken" target="_blank" class="button reddit bg-opacity-backdrop-blur">Reddit</a></li><li><a rel="noreferrer noopen" href="https://goldengatetoken.medium.com" target="_blank" class="button medium bg-opacity-backdrop-blur">Medium</a></li></ul></div></header><div class="text-xl content"><div class="mt-2 md:mt-8"><div class="text-3xl font-regular"><span class="font-bold">World's largest artificial intelligence trade algorithm</span>.<br /><div class="underline"  target="_blank" rel="noreferrer noopen">Decentralized launchpad coming this Q3.</div></div></div><ul class="text-2xl mt-4"><li><span role="img" aria-label="rocket">🪐</span> <!-- -->Golden Gate Trade, the world's largest artificial intelligence trade algorithm, is with you very soon.
+What you need to do is bring us to a lot more people and make sure everyone can join this great community.
+See you on the month very soon.<!-- --> 
+            <br /><br />
+             <!-- --></li><li><span role="img" aria-label="earth">🌘</span><span class="font-bold">GOLDEN GATE Token</span> <!-- -->on the Binance Smart Chain</li>
             <!--<li><span role="img" aria-label="fire">🔥</span>More than 57% of the tokens have been burned</li>-->
             <!--<li><span role="img" aria-label="moon">🌏</span>Fair-launched,<a rel="noreferrer noopen" href="https://twitter.com/waronrugs/status/1375964245179965447" target="_blank" class="underline">audited</a>, community coin</li>
             <li><span role="img" aria-label="moon">🌗</span>
