--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="relative bg-opacity-75 p-2 pr-6 rounded-full inline-block bg-black bg-opacity-backdrop-blur text-white text-opacity-80">
                 <span class="dot"></span>
                 <p class="pl-7">GOLDEN GATE Token (v2) is now available for trade! You can buy it<!-- --> 
-                <a rel="noreferrer noopen" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xf8d9FeEae0360E183A3BD81c034a04Cf7E261Ba5" target="_blank" class="underline">right here</a>. -<!-- --> 
+                <a rel="noreferrer noopen" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xf8d9FeEae0360E183A3BD81c034a04Cf7E261Ba5" target="_blank" class="underline">right here</a>. <!-- --> 
                 
                     </p>
                 </div>
