--- a/index.html
+++ b/index.html
@@ -42,20 +42,28 @@
                 </div>
             <div class="select-none md:flex md:flex-row md:items-center">
             <div style="display:inline-block;max-width:100%;overflow:hidden;position:relative;box-sizing:border-box;margin:0">
-                <div style="box-sizing:border-box;display:block;max-width:100%">
-                <img style="max-width:100%;display:block;margin:0;border:none;padding:0" alt="" aria-hidden="true" role="presentation" src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTM2IiBoZWlnaHQ9IjE2OSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4=" />
-                    </div>
+                
                 <img src="./assets/logo_small.png"  width="188" height="273">
                 </div><ul class="navigation md:ml-5"><li><a rel="noreferrer noopen" href="https://twitter.com/goldengatetoken" target="_blank" class="button twitter bg-opacity-backdrop-blur">Twitter</a></li><li><a rel="noreferrer noopen" href="https://t.me/goldengatetoken" target="_blank" class="button telegram bg-opacity-backdrop-blur">Telegram</a></li><li><a rel="noreferrer noopen" href="https://discord.gg/RhCfUMsYVa" target="_blank" class="button discord bg-opacity-backdrop-blur">Discord</a></li><li><a rel="noreferrer noopen" href="https://www.reddit.com/r/goldengatetoken" target="_blank" class="button reddit bg-opacity-backdrop-blur">Reddit</a></li><li><a rel="noreferrer noopen" href="https://goldengatetoken.medium.com" target="_blank" class="button medium bg-opacity-backdrop-blur">Medium</a></li></ul></div></header><div class="text-xl content"><div class="mt-2 md:mt-8"><div class="text-3xl font-regular"><span class="font-bold">World's largest artificial intelligence trade algorithm</span>.<br /><div class="underline"  target="_blank" rel="noreferrer noopen">Decentralized launchpad coming this Q3.</div></div></div><ul class="text-2xl mt-4"><li><span role="img" aria-label="rocket">🪐</span> <!-- -->Golden Gate Trade, the world's largest artificial intelligence trade algorithm, is with you very soon.
 What you need to do is bring us to a lot more people and make sure everyone can join this great community.
 See you on the month very soon.<!-- --> 
             <br /><br />
              <!-- --></li><li><span role="img" aria-label="earth">🌘</span><span class="font-bold">GOLDEN GATE Token</span> <!-- -->on the Binance Smart Chain</li>
-            <!--<li><span role="img" aria-label="fire">🔥</span>More than 57% of the tokens have been burned</li>-->
-            <!--<li><span role="img" aria-label="moon">🌏</span>Fair-launched,<a rel="noreferrer noopen" href="https://twitter.com/waronrugs/status/1375964245179965447" target="_blank" class="underline">audited</a>, community coin</li>
-            <li><span role="img" aria-label="moon">🌗</span>
-            Liquidity locked on <a rel="noreferrer noopen" href="https://unicrypt.network/amm/pancake/pair/0xcddb8cfbf46c8459a451196d259c4e0e1b75999d" target="_blank" class="underline">Unicrypt</a></li>-->
-            </ul>
+
+            <br />
+<li><div class="underline"  target="_blank" rel="noreferrer noopen">ROAD MAP</div></li><br />
+
+        <!--<li><span role="img" aria-label="fire">🔥</span>More than 57% of the tokens have been burned</li>-->
+          <li><span role="img" aria-label="fire">🔥</span><span class="font-bold">Quarter 1:</span> Dex.Guru and Pancakeswap list and pre-sale</li><br />
+          <li><span role="img" aria-label="fire">🔥</span><span class="font-bold">Quarter 2:</span> GOLDEN GATE artificial intelligence trade algorithm is completed and made available to the community</li><br />
+          <li><span role="img" aria-label="fire">🔥</span><span class="font-bold">Quarter 3:</span> First listing on exchanges such as bit mart and gate io and promotion of the golden gate wallet</li><br />
+          <li><span role="img" aria-label="fire">🔥</span><span class="font-bold">Quarter 4:</span> GOLDEN GATE WALLET and the journey to the moon</li><br />
+
+
+        <!--Liquidity locked on <a rel="noreferrer noopen" href="https://unicrypt.network/amm/pancake/pair/0xcddb8cfbf46c8459a451196d259c4e0e1b75999d" target="_blank" class="underline">Unicrypt</a></li>-->
+</ul>
+
+
             <div class="pt-8"><ul class="navigation"><li><a target="_blank" rel="noreferrer noopen" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xf8d9FeEae0360E183A3BD81c034a04Cf7E261Ba5" class="button bnb bg-opacity-backdrop-blur">Buy on Pancakeswap</a></li><li><a target="_blank" rel="noreferrer noopen" href="https://dex.guru/token/0xf8d9FeEae0360E183A3BD81c034a04Cf7E261Ba5-bsc" class="button trading bg-opacity-backdrop-blur">Dex.Guru Chart</a></li><li><a target="_blank" rel="noreferrer noopen" href="https://poocoin.app/tokens/0xf8d9FeEae0360E183A3BD81c034a04Cf7E261Ba5" class="button trading bg-opacity-backdrop-blur">Poocoin Chart</a></li></ul><p class="mt-6 text-sm">Contract address on Binance Smart Chain:<!-- --> <input type="text" class="font-mono bg-transparent inline resize-none overflow-scroll border-none hover:border-none select-none min-w-full focus:outline-none" readonly="" value="0xf8d9FeEae0360E183A3BD81c034a04Cf7E261Ba5" /></div></div><footer class="py-5 text-white text-md opacity-60"><p>© 2021<!-- --> <span class="font-bold">goldengatetoken</span>. All rights reserved.</p></footer></div></div></div></div>
 
     <!--<script id="__NEXT_DATA__" type="application/json">{"props":{"pageProps":{}},"page":"/","query":{},"buildId":"-WuCOJ1NKqYfMdD7h18P1","nextExport":true,"autoExport":true,"isFallback":false}</script>-->
